# ffi_zxing

./: .gitignore  .metadata  LICENSE  README.md  init.sh  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/ffi_zxing_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: ZxingPage.dart  main.dart
ios/: ffi_zxing.podspec
ios/Classes/src/: CMakeLists.txt  native_zxing.cpp
lib/: ffi_zxing.dart  ffi_zxing_bindings_generated.dart
lib/camera/: CameraPreview.dart  data_model.dart  flow_data_model.dart
